@@ -9,6 +9,9 @@
 /** \page changes Changes
 \section vercvs CVS Version
 
+2006 January 20:
+- bug fix: Date-, DateTime- and Time-fields were broken. store- and load-template functions added to (de)serialize fields.
+
 2006 January 19:
 - bug fix: MySQL 5 does not like names like 'schema' and 'sql'. Internal table is now named to 'schema_' and fields are postfixed with an underscore. This breaks compatibility with databases created with previous versions. 
 
